--- a/.github/workflows/first_job.yml
+++ b/.github/workflows/first_job.yml
@@ -5,14 +5,13 @@ on:
 
 jobs: 
     first_job: 
-        name: jomacs-k8s
         runs-on: ubuntu-latest
         steps:
-            - name: First Message
-              run: echo "Welcome to the World of CICD through Github Actions"
+            - name: Checkout Code
+              uses: actions/checkout@v4
 
-            - name: List All Files including hidden
-              run: ls -1a
-
-            - name: Show Present Working Directory
-              run: pwd
+            - name: List and Read files
+              run: |
+                echo "My first GitHub Actions Job"
+                ls -1
+                cat dockerfile
