--- a/.github/workflows/ascii-workflow.yml
+++ b/.github/workflows/ascii-workflow.yml
@@ -5,23 +5,10 @@ on:
 
 jobs:
   first_job:
-    name: ASCII
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Install Cowsay Program
-        run: sudo apt-get install cowsay -y
-
-      - name: Execute Cowsay Command
-        run: cowsay -f dragon "Run for cover, I am a DRAGON......RAWR" >> dragon.txt
-
-      - name: Test file exists
-        run: grep -i "dragon" dragon.txt
-
-      - name: Read File
-        run: cat dragon.txt
-
-      - name: List Repo files
-        run: ls -ltra
+      - name: Execute Shell Script
+        run: ./ascii-script.sh
