--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Docker Build
-        run: docker build -t docker.io/nickadade/resume-app:latest .
+        run: docker build -t resume-app:latest .
 
       - name: Docker Login
         run: docker login --username=nickadade --password=Aiden@123
